--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title> The Mustard</title>
         <!-- font awesome -->
+        <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 
         <!-- custom css-->
         <link rel="stylesheet" href="styles.css">
@@ -19,10 +20,80 @@
                     <i class="fas fa-bars"></i>
                 </span>
                 <img src="./images/logo2.jpg" alt="store-logo"/>
+                <div class="cart-btn">
+                    <span class="nav-icon">
+                        <i class="fas fa-cart-plus"></i>
+                    </span>
+                    <div class="cart-items">0</div>
+                </div>
             </div>
         </nav>
 
         <!--end of navbar-->
+        <!--Hero-->
+        <header class="hero">
+            <div class="banner">
+                <h1 class="bannerititle"> QUALITY VEGETABLES YOU CAN TRUST</h1>
+                <button class="banner-btn">Place your order now</button>
+            </div>
+        </header>
+
+
+        <!--end of hero-->
+        <!--Products-->
+        <section class="products">
+            <div class="section-title">
+                <h2>Our Products</h2>
+            </div>
+            <div class="products-center">
+                <!--product-->
+                <article class="product">
+                    <div class="img-container">
+                        <img src="./images/kales.jpg" alt="kales" class="product-img">
+                        <button class="bag-btn" data-id="1">
+                            <i class="fas fa-shopping-cart"></i>
+                            Add to cart
+                        </button>
+                    </div>
+                    <h3>Kales</h3>
+                    <h4>KSh. 150</h4>
+                </article>
+                <!--single product-->
+            </div>
+        </section>
+        </section>
+        <!--end of products-->
+        <!--cart-->
+        <div class="cart-overlay">
+            <div class="cart">
+                <span class="close-cart">
+                    <i class="fas fa-window-close"></i>
+                </span>
+                <h2> Your shopping cart</h2>
+                <div class="cart-content"> 
+                    <!--cart item-->
+                    <div class="cart-item">
+                        <img src="./images/kales.jpg" alt="product">
+                        <div>
+                            <h4>Kales</h4>
+                            <h5>Ksh 150</h5>
+                            <span class="remove-item">Remove from cart</span>
+                        </div>
+                        <div>
+                            <i class="fas fa-chevron-up"></i>
+                            <p class="item-amount">1</p>
+                            <i class="fas fa-chevron-down"></i>
+                        </div>
+                    </div>
+                    <!--end of cartitem-->
+                </div>
+                <div class="cart-footer"> 
+                    <h3> Your total: Ksh <span class="cart-total">0</span></h3>
+                    <button class="clear-cart banner-btn">Clear cart</button>
+                </div>
+            </div>
+        </div>
+        <!--end of cart-->
         <script src="app.js"></script>
 
     </body>
