--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title> The Mustard</title>
         <!-- font awesome -->
-        <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
         <!-- custom css-->
         <link rel="stylesheet" href="styles.css">
@@ -17,12 +17,12 @@
         <nav class="navbar">
             <div class="navbar-center">
                 <span class="nav-icon">
-                    <i class="fas fa-bars"></i>
+                    <i class="fa fa-bars"></i>
                 </span>
                 <img src="./images/logo2.jpg" alt="store-logo"/>
                 <div class="cart-btn">
                     <span class="nav-icon">
-                        <i class="fas fa-cart-plus"></i>
+                        <i class="fa fa-cart-plus"></i>
                     </span>
                     <div class="cart-items">0</div>
                 </div>
@@ -46,19 +46,7 @@
                 <h2>Our Products</h2>
             </div>
             <div class="products-center">
-                <!--product-->
-                <article class="product">
-                    <div class="img-container">
-                        <img src="./images/kales.jpg" alt="kales" class="product-img">
-                        <button class="bag-btn" data-id="1">
-                            <i class="fas fa-shopping-cart"></i>
-                            Add to cart
-                        </button>
-                    </div>
-                    <h3>Kales</h3>
-                    <h4>KSh. 150</h4>
-                </article>
-                <!--single product-->
+                
             </div>
         </section>
         </section>
@@ -67,7 +55,7 @@
         <div class="cart-overlay">
             <div class="cart">
                 <span class="close-cart">
-                    <i class="fas fa-window-close"></i>
+                    <i class="fa fa-window-close"></i>
                 </span>
                 <h2> Your shopping cart</h2>
                 <div class="cart-content"> 
@@ -80,9 +68,9 @@
                             <span class="remove-item">Remove from cart</span>
                         </div>
                         <div>
-                            <i class="fas fa-chevron-up"></i>
+                            <i class="fa fa-chevron-up"></i>
                             <p class="item-amount">1</p>
-                            <i class="fas fa-chevron-down"></i>
+                            <i class="fa fa-chevron-down"></i>
                         </div>
                     </div>
                     <!--end of cartitem-->
